# rumlem

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  README.md  junk.py  setup.cfg  simple_illustration.ipynb
example_notebooks/: analyze_corpus.ipynb  idiom_classification.ipynb  overview.ipynb  romansh_identification.ipynb
lemmatizer/: analyzer.py  idiom_id.py  lemmatizer.py
lemmatizer/edit_trees/rm-puter/adj/: et.txt
lemmatizer/edit_trees/rm-puter/noun/: et.txt
lemmatizer/in_voc/: rm-rumgr.txt  rm-sursilv.txt  rm-sutsilv.txt
lemmatizer/lemma_tables/: rm-puter.json  rm-rumgr.json  rm-surmiran.json  rm-sursilv.json  rm-sutsilv.json  rm-vallader.json
lemmatizer/other_de/: rm-puter.json  rm-rumgr.json  rm-sursilv.json
paper_eval_code/: README.md  config.py  create_plots.py  ds_loaders.py  eval_funcs.py  pipeline_all_evals.py  utils.py
paper_eval_code/Coverage/: analyse_missed_tokens.py  coverage_run_eval.py  eval_analysis.json  eval_analysis_edittrees.json  get_missed_words_per_idiom.py  unknown_words_per_idiom.json
paper_eval_code/Coverage/uncovered_tokens_analysis/: analyse_uncovered_tokens.py  uncovered_tokens_analysis.json
paper_eval_code/LangID/: langID_run_eval.py
paper_eval_code/VarietyID/: varietyID_run_eval.py
paper_eval_code/VarietyID/as_is/: eval_analysis.json
paper_eval_code/VarietyID/sets_only/: eval_analysis_sets_only.json
paper_eval_code/VarietyID/stopwords_removed/: eval_analysis_stopwords_removed.json
src/romansh_lemmatizer/: analyzer.py  edittree.py  lemmatizer.py  utils.py
src/romansh_lemmatizer/in_voc/: rm-puter.txt  rm-rumgr.txt  rm-surmiran.txt  rm-sursilv.txt  rm-sutsilv.txt  rm-vallader.txt
src/romansh_lemmatizer/other_de/: rm-puter.json  rm-rumgr.json  rm-surmiran.json  rm-sursilv.json  rm-sutsilv.json  rm-vallader.json
src/rumlem/: __init__.py  analyzer.py  idiom_id.py  lemmatizer.py  tokenizer.py
src/rumlem/in_voc/: rm-puter.txt  rm-rumgr.txt  rm-surmiran.txt  rm-sursilv.txt  rm-sutsilv.txt  rm-vallader.txt
src/rumlem/other_de/: rm-rumgr.json  rm-surmiran.json
tests/: test_analyzer.py  test_edittree.py  test_idiom_id.py  test_interface.py  test_tokenizer.py  test_utils.py
(+78 files in other folders)
