[metadata]
name = lemmatizer
version = 0.0.1
author = University of Zurich
description = An Idiom-Aware Lemmatizer for Romansh
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZurichNLP/ruma
project_urls =
    Bug Tracker = https://github.com/ZurichNLP/ruma/issues

[options]
packages = find:
package_dir =
install_requires =
    frozendict
    jiwer
    sacremoses
include_package_data = True

[options.extras_require]
dev =
    spacy==3.8.7

[options.packages.find]
where = 

[options.package_data]
lemmatizer = 
    edit_trees/**/*.txt
    in_voc/*.txt
    lemma_tables/*.json
    other_de/*.json
