[metadata]
name = rumlem
version = 1.0.0
author = University of Zurich
description = A Dictionary-Based, Variety-Aware Lemmatizer for Romansh
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZurichNLP/rumlem
project_urls =
    Bug Tracker = https://github.com/ZurichNLP/rumlem/issues

[options]
packages = find:
package_dir =
    = src
install_requires =
    frozendict
    jiwer
    sacremoses
include_package_data = True

[options.extras_require]
dev =
    spacy==3.8.7

[options.packages.find]
where = src

[options.package_data]
rumlem =
    edit_trees/**/*.txt
    in_voc/*.txt
    lemma_tables/*.json
    other_de/*.json
